acpi: Fix setting sleep state sysctls to NONE

This restores the functionality as it was pre-b54d1e8ca4d8.

A stopgap was committed by glebius@ in 8dd9b333262e ("acpi: in
acpi_stype_sysctl() use same logic as in acpi_sleep_state_sysctl()").

PR:		290651
Reviewed by:	thj, emaste
Approved by:	thj
Fixes:	b54d1e8ca4d8 ("acpi: Use sleep types defined in sys/power.h")
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D53909